--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -41,7 +41,7 @@
 .about-image img {
   width: 100%;
   height: auto;
-  box-shadow: var(--box-shadow);
+  filter: drop-shadow(10px 10px 10px #000);
 }
 
 /* Services Section */
