Made Gallery responsive

--- a/src/pages/GalleryPage.css
+++ b/src/pages/GalleryPage.css
@@ -1,10 +1,11 @@
-.image-grid{
+.image-grid {
   display: grid;
   grid-template-columns: repeat(4, 0.4fr);
   gap: 20px;
   padding: 0 8px;
   margin: 10px;
 }
+
 .video-grid {
   display: grid;
   grid-template-columns: repeat(2, 0.6fr);
@@ -32,7 +33,6 @@
   background-color: #fff; /* Optional inner background */
 }
 
-
 img {
   width: 100%;
   height: 100%;
@@ -42,14 +42,15 @@ img {
 }
 
 .video-item {
-  width: 80%;
-  height: 500px;
-  aspect-ratio: 1 / 1;
+  width: 100%;
+  max-width: 100%;
+  height: auto;
+  aspect-ratio: 16 / 9;
   object-fit: cover;
   border-radius: 12px;
   border: 2px solid #000;
   display: block;
-  margin-left: 60px;
+  margin: 0 auto;
 }
 
 @media (max-width: 600px) {
